--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,7 @@ variables styling
 -----------------------------*/
 :root {
 	--grey: #fafafa;
+	--lightgray: #959ca7;
 	--darkgrey: #4c525a;
 	--green:#00b289;
 	--white:#fff;
@@ -43,6 +44,10 @@ a {
 }
 img{
 	max-width: 100%;
+}
+sup{
+	color: var(--green);
+	font-weight: bolder;
 }
 .fas.fa-chevron-down {
     font-size: 12px;
@@ -92,12 +97,38 @@ header
 	list-style-type: none;
 	text-transform: uppercase;
 	letter-spacing: .07em;
+	cursor: pointer;
 }
-
 .header-nav__item a{
 	padding: 14px 14px;
-	}
-
+}
 .header-nav__logo{
 	margin-right: auto;
 }
+/* Dropdown Content (Hidden by Default) */
+.header-dropdown {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+	padding: 0;
+	list-style-type: none;
+	top: 72px;
+	border-radius: 10px;
+	background-color: var(--white);
+}
+/* Links inside the dropdown */
+.header-dropdown a {
+    color:var(--lightgray);
+	padding: 14px 8px 14px 18px;
+	display: block;
+}
+/* Change color of dropdown links on hover */
+.header-dropdown a:hover {
+	color:var(--darkgrey);
+	transition: .3s;
+}
+/* Show the dropdown menu */
+.show {display:block;} 
