--- a/assets/style.css
+++ b/assets/style.css
@@ -172,7 +172,6 @@ section-4
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 4px 8px 0 rgba(0, 0, 0, 0.1);
 	border-radius: 25px 25px 0 0;
 	border-bottom: 0; 
-	
 }
 .section-4-main__item1 img{
 	border:1px solid #ddd;
@@ -182,7 +181,6 @@ section-4
 .section-4-main__item2{
 	grid-column: 8/12;
 	padding: 10px;
-	
 }
 .section-4-main__moving{
 	border-radius: 50%;
@@ -190,15 +188,26 @@ section-4
 	padding: 15px;
 	width: 90px;
 	height: 90px;
-	margin-top: 50px;
-	margin-bottom: 10px;
-
+	animation: slidedown 3s infinite alternate;	
 }
+
+
+@keyframes slidedown {
+	from{
+		margin-top: 20px;
+		margin-bottom: 40px;
+	}
+	to{
+		margin-top: 40px;
+		margin-bottom: 20px;
+	}
+}
+
 .section-4-main__item2 h2{
+	margin-top: 10px; 
 	font-size: 2.3em;
 	font-family: "Proximanova light";
 	color: #00b289;
-
 }
 .section-4-main__item2 p:first-of-type{
 	line-height: 20px;
@@ -276,8 +285,43 @@ section-5
 	width: 95px;
 	height: 95px;
 	margin: auto;
-	margin-bottom: 20px;
+	-webkit-animation: slidedown 3s infinite alternate;
+	-moz-animation: slidedown 3s infinite alternate;	
+	animation: slidedown 3s infinite alternate;	
+
 }
+
+@-webkit-keyframes slidedown {
+	from{
+		margin-top: 20px;
+		margin-bottom: 35px;
+	}
+	to{
+		margin-top: 35px;
+		margin-bottom: 20px;
+	}
+}
+@-moz-keyframes slidedown {
+	from{
+		margin-top: 20px;
+		margin-bottom: 35px;
+	}
+	to{
+		margin-top: 35px;
+		margin-bottom: 20px;
+	}
+}
+@keyframes slidedown {
+	from{
+		margin-top: 20px;
+		margin-bottom: 35px;
+	}
+	to{
+		margin-top: 35px;
+		margin-bottom: 20px;
+	}
+}
+
 .section-5-main__footer{
 	grid-column: 1/-1;
 	background-image: url('https://uploads-ssl.webflow.com/58868bcd2ef4daaf0f072900/594c93d4f9a65a6318d46598_world-map.png');
