--- a/assets/style.css
+++ b/assets/style.css
@@ -88,7 +88,16 @@ container
     display: grid;
     grid-template-columns: auto 940px auto;
 }
-
+@media only screen and (max-width: 982px){
+	.container {
+    	grid-template-columns: auto 720px auto;
+	}
+}
+@media only screen and (max-width: 810px){
+	.container {
+    	grid-template-columns: 20px auto 20px;
+	}
+}
 main{
     grid-column-start:2;
 }
@@ -101,7 +110,7 @@ header
 	background-color:var(--grey);
     justify-content: center;
     display: flex;
-    
+    border:1px solid red;
 }
 
 .header-nav{
@@ -176,10 +185,9 @@ Zoey
 section-4
 -----------------------------*/
 .section-4{
-	grid-column-start: 2;
+	grid-column: 2/3;
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
-	grid-template-rows: repeat(3, auto);
 	color: #696969;
 }
 
@@ -201,17 +209,26 @@ section-4
 	display: flex;
 	flex-direction: column;
 }
+
 .section-4-main__tabs{
 	display: flex;
+	flex-direction: row;
 	justify-content: space-around;
 	align-items: center;
+	flex-wrap: wrap;
 	margin-top: 0;
-	padding: 30px 110px; 
+	padding: 20px 110px; 
 	border-bottom: 1px solid #ddd;
+}
+
+@media only screen and (max-width: 982px){
+	.section-4-main__tabs{
+		padding: 20px 15px;
+	}
 }
 .section-4-list{
 	list-style-type: none;
-	display: inline-block;	
+	padding: 8px;
 }
 .active-tab{
 	color: #00b289;
@@ -226,6 +243,11 @@ section-4
 	align-self: flex-start;
 	padding: 20px;
 	padding-bottom: 0
+}
+@media only screen and (max-width: 982px){
+	.section-4-main__item1{
+		grid-column: 1/-1;
+	}
 }
 
 .section-4-main__item1 div{
@@ -248,7 +270,11 @@ section-4
 	grid-column: 7/13;
 	padding: 10px;
 }
-
+@media only screen and (max-width: 982px){
+	.section-4-main__item2{
+		grid-column: 1/-1;
+	}
+}
 .section-4-main__moving{
 	border-radius: 50%;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
@@ -341,7 +367,7 @@ Zoey
 section-5
 -----------------------------*/
 .section-5{
-	grid-column-start: 2;
+	grid-column: 2/3;
 	display: grid;
 	grid-template-columns: repeat(12 , 1fr);
 	grid-gap: 50px;
@@ -374,13 +400,15 @@ section-5
 	grid-column: 1/ 13;
 	display: flex;
 	justify-content: space-around;
-	align-items: center;
-	flex-wrap: wrap; 
+	align-items: center; 
 }
-
+@media only screen and (max-width: 810px){
+	.section-5-main{
+		flex-direction: column;
+	}
+}
 .section-5-main__item{
     text-align: center;
-
 }
 
 .section-5-main__moving{
@@ -464,7 +492,7 @@ Zoey
 section-6
 -----------------------------*/
 .section-6{
-	grid-column-start: 2;
+	grid-column: 2/3;
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
 	grid-column-gap: 40px;
@@ -477,6 +505,11 @@ section-6
 	flex-direction: column;
 	padding-bottom: 30px;
 	
+}
+@media only screen and (max-width: 810px){
+	.section-6-part1{
+		grid-column: 1/-1;
+	}
 }
 .section-6-part1__title{
 	display: inline-block;
@@ -508,7 +541,11 @@ section-6
 	grid-column: 9/13;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
 }
-
+@media only screen and (max-width: 810px){
+	.section-6-part2{
+		grid-column: 2/12;
+	}
+}
 .section-6-part2 ul{	
 	list-style-type: none;
 	font-size: 1.4rem;
@@ -528,7 +565,7 @@ section-6
 Nils
 section-1
 -----------------------------*/
-
+/*
 .section-1 {
     grid-column: 1/ -1;
     display: grid;
@@ -574,6 +611,7 @@ section-9
 Nils
 footer
 -----------------------------*/
+
 footer{
     grid-column: 2;
     height: 50px;
