--- a/assets/style.css
+++ b/assets/style.css
@@ -85,32 +85,22 @@ p {
 container
 -----------------------------*/
 .container {
-    display: grid;
-    grid-template-columns: auto 940px auto;
-}
-@media only screen and (max-width: 982px){
-	.container {
-    	grid-template-columns: auto 720px auto;
-	}
-}
-@media only screen and (max-width: 810px){
-	.container {
-    	grid-template-columns: 20px auto 20px;
-	}
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 main{
-    grid-column-start:2;
+    
 }
 
 /*-----------------------------
 header
 -----------------------------*/
 .header{
-    grid-column: 1/-1;
 	background-color:var(--grey);
     justify-content: center;
     display: flex;
-    border:1px solid red;
 }
 
 .header-nav{
@@ -185,14 +175,14 @@ Zoey
 section-4
 -----------------------------*/
 .section-4{
-	grid-column: 2/3;
-	display: grid;
-	grid-template-columns: repeat(12, 1fr);
+	width:940px;
 	color: #696969;
+	display: flex;
+	flex-direction: column;
 }
 
 .section-4-header{
-	grid-column: 1/-1;
+	
 }
 
 .section-4-header__title{
@@ -205,7 +195,6 @@ section-4
 }
 
 #tabs{
-	grid-column: 1/-1;
 	display: flex;
 	flex-direction: column;
 }
@@ -220,12 +209,6 @@ section-4
 	padding: 20px 110px; 
 	border-bottom: 1px solid #ddd;
 }
-
-@media only screen and (max-width: 982px){
-	.section-4-main__tabs{
-		padding: 20px 15px;
-	}
-}
 .section-4-list{
 	list-style-type: none;
 	padding: 8px;
@@ -234,22 +217,14 @@ section-4
 	color: #00b289;
 }
 #tabs-1 , #tabs-2, #tabs-3 , #tabs-4, #tabs-5 {
-	display: grid;
-	grid-template-columns: repeat(12, 1fr);
+	display: flex;
 }
 .section-4-main__item1{
-	grid-column: 1/7;
 	border-bottom: 1px solid #ddd;
 	align-self: flex-start;
 	padding: 20px;
 	padding-bottom: 0
 }
-@media only screen and (max-width: 982px){
-	.section-4-main__item1{
-		grid-column: 1/-1;
-	}
-}
-
 .section-4-main__item1 div{
 	padding: 20px;
 	padding-bottom: 0;
@@ -267,14 +242,9 @@ section-4
 }
 
 .section-4-main__item2{
-	grid-column: 7/13;
 	padding: 10px;
 }
-@media only screen and (max-width: 982px){
-	.section-4-main__item2{
-		grid-column: 1/-1;
-	}
-}
+
 .section-4-main__moving{
 	border-radius: 50%;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
@@ -351,7 +321,6 @@ section-4
     font-size: 12px;
     margin-left: 7px;}
 .section-4__button{
-	grid-column: 5 / 9;
 	background-color: #00b289;
 	border-radius: 4px;
 	color: #fff;
@@ -367,15 +336,14 @@ Zoey
 section-5
 -----------------------------*/
 .section-5{
-	grid-column: 2/3;
-	display: grid;
-	grid-template-columns: repeat(12 , 1fr);
-	grid-gap: 50px;
+	width: 940px;
+	display: flex;
+    flex-direction: column;
 	color: #696969;	
 }
 
 .section-5-header{
-	grid-column: 1/-1;
+	
 }
 
 .section-5-header__title{
@@ -397,16 +365,11 @@ section-5
 }
 
 .section-5-main{
-	grid-column: 1/ 13;
 	display: flex;
 	justify-content: space-around;
 	align-items: center; 
 }
-@media only screen and (max-width: 810px){
-	.section-5-main{
-		flex-direction: column;
-	}
-}
+
 .section-5-main__item{
     text-align: center;
 }
@@ -466,7 +429,6 @@ section-5
 }
 
 .section-5-main__footer{
-	grid-column: 1/-1;
 	background-image: url('https://uploads-ssl.webflow.com/58868bcd2ef4daaf0f072900/594c93d4f9a65a6318d46598_world-map.png');
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
@@ -492,25 +454,18 @@ Zoey
 section-6
 -----------------------------*/
 .section-6{
-	grid-column: 2/3;
-	display: grid;
-	grid-template-columns: repeat(12, 1fr);
-	grid-column-gap: 40px;
+	width: 940px;
+	display: flex;
 	color: #696969;
 	margin-bottom: 100px; 
 }
 .section-6-part1{
-	grid-column: 1/9;
 	display: flex;
 	flex-direction: column;
 	padding-bottom: 30px;
 	
-}
-@media only screen and (max-width: 810px){
-	.section-6-part1{
-		grid-column: 1/-1;
-	}
-}
+}	
+
 .section-6-part1__title{
 	display: inline-block;
 	text-align: left;
@@ -538,13 +493,8 @@ section-6
 }
 
 .section-6-part2{
-	grid-column: 9/13;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
-}
-@media only screen and (max-width: 810px){
-	.section-6-part2{
-		grid-column: 2/12;
-	}
+	width: 480px;
 }
 .section-6-part2 ul{	
 	list-style-type: none;
@@ -565,38 +515,38 @@ section-6
 Nils
 section-1
 -----------------------------*/
-/*
-.section-1 {
-    grid-column: 1/ -1;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-gap: 50px;
-    background-color: var(--grey);
 
+.section-1 {
+    display: flex;
+    width: 940px;
+    background-color: var(--grey);
 }
 
 .section-1-part1 {
-    grid-column: 4 / 7;
     margin-top: 50px;
 }
 
 .section-1-part2 {
-    grid-column: 7 / 12;
+	width: 65%;
     min-height: 400px;
-    background-color: #a0c263;
     margin-top: 50px;
 }
 
-#section-1-button {
+.section-1-button {
     border-radius: 5px;
     color: white;
     padding: 1.2em 1.7em 1.2em 1.7em;
     text-decoration: none;
     background-color: var(--green);
 }
-
+.section-1-button:hover{
+	opacity: 0.9;
+}
 .section-1-part1 > p {
     margin-bottom: 10%;
+}
+.section-1-part1 div {
+	margin: 3em 2em 6em 0;
 }
 /*-----------------------------
 Nils
