--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,8 @@ variables styling
     --lightgrey: #959ca7;
     --darkgrey: #4c525a;
     --green: #00b289;
-    --white: #fff;
+	--white: #fff;
+	--textgrey: #777;
 }
 
 /*-----------------------------
@@ -21,10 +22,10 @@ general
 }
 
 @font-face {
-    font-family: "Proximanova regular";
-    font-style: normal;
-    font-weight: 400;
-    src: url("https://uploads-ssl.webflow.com/58868bcd2ef4daaf0f072900/58882027df653d342d043883_ProximaNova-Regular.otf") format("opentype");
+	font-family: "Proximanova regular";
+	font-style: normal;
+	font-weight: 400;
+	src: url("https://uploads-ssl.webflow.com/58868bcd2ef4daaf0f072900/58882027df653d342d043883_ProximaNova-Regular.otf") format("opentype");
 }
 
 @font-face {
@@ -41,7 +42,9 @@ html, body {
 body {
     background: #faffff;
     font-family: "Proximanova regular", Georgia, sans-serif;
-    font-size: 14px;
+	font-size: 14px;
+	margin: 0;
+	padding: 0;
 }
 
 a {
@@ -59,11 +62,12 @@ sup {
 }
 
 p {
-    color: #696969;
+    color: var(--textgrey);
     font-size: 1.2em;
-    font-family: "Proximanova light";
+	font-family: "Proximanova regular";
+	font-weight: 400;
+	line-height: 24px;
 }
-
 .fas.fa-chevron-down {
     font-size: 12px;
     margin-left: 7px;
@@ -113,7 +117,8 @@ header
     display: flex;
     position: sticky;
     top: 0;
-    width: 100%;
+	width: 100%;
+	z-index: 1;
 }
 
 .header-nav{
@@ -176,7 +181,8 @@ header
 h1 {
     color: #00b289;
     font-size: 2.5em;
-    font-family: "Proximanova light";
+	font-family: "Proximanova light";
+	font-weight: 300;
 }
 /*-----------------------------
 Lazycesar
@@ -185,17 +191,21 @@ section-1
 
 .section-1 {
     display: flex;
-    width: 940px;
+	width: 940px;
+	position: relative;
 }
 
 .section-1-part1 {
-    margin-top: 50px;
+	margin-top: 50px;
+	width: 50%;
 }
 
 .section-1-part2 {
-	width: 65%;
+    width: 77%;
     min-height: 400px;
-    margin-top: 50px;
+    position: absolute;
+    top: 30px;
+    right: -281px;
 }
 
 .section-1-button {
