--- a/assets/style.css
+++ b/assets/style.css
@@ -46,6 +46,12 @@ body {
 	margin: 0;
 	padding: 0;
 }
+h1 {
+    color: #00b289;
+    font-size: 2.45em;
+	font-family: "Proximanova light";
+	font-weight: 300;
+}
 
 a {
     text-decoration: none;
@@ -63,7 +69,7 @@ sup {
 
 p {
     color: var(--textgrey);
-    font-size: 1.2em;
+    font-size: 1.12em;
 	font-family: "Proximanova regular";
 	font-weight: 400;
 	line-height: 24px;
@@ -74,12 +80,13 @@ p {
 }
 
 .button{
-	background-color:var(--green);
+	background-color: var(--green);
 	border-radius: 4px;
 	color: var(--white);
-	padding: 14px 14px;
+	padding: 16px 26px;
 	text-transform: uppercase;
 	display: inline-block;
+	letter-spacing: 1px;
 }
 .button-outline{
 	border:1px solid var(--green);
@@ -175,13 +182,6 @@ header
 .show {
     display: block;
 }
-
-h1 {
-    color: #00b289;
-    font-size: 2.5em;
-	font-family: "Proximanova light";
-	font-weight: 300;
-}
 /*-----------------------------
 Lazycesar
 section-1
@@ -190,19 +190,23 @@ section-1
     display: flex;
 	width: 940px;
 	position: relative;
+	padding-top: 3rem;
+	padding-bottom: 8rem;
 }
 .dashboard-text {
-	margin-top: 50px;
 	width: 45%;
 }
+.dashboard-text .button {
+    margin-top: 15px;
+    margin-bottom: 20px;
+}
 .dashboard-img {
-    width: 77%;
-    min-height: 400px;
+    width: 80%;
     position: absolute;
     top: 30px;
     right: -281px;
 }
-.dashboard .button:hover{
+.button--hover:hover{
 	opacity: 0.9;
 }
 .dashboard > p {
@@ -210,7 +214,8 @@ section-1
 }
 .dashboard-logos {
 	margin-top:1rem;
-	display: block;
+	display: inline-block;
+	opacity: 0.5;
 }
 /*-----------------------------
 Zoey
