--- a/assets/style.css
+++ b/assets/style.css
@@ -565,6 +565,30 @@ section-1
 Nils
 section-8
 -----------------------------*/
+
+.section-8 {
+    grid-column: 1/-1;
+    margin: auto;
+}
+
+.section-8-flex {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section-8__button{
+    background-color: #00b289;
+    border-radius: 4px;
+    color: #fff;
+    letter-spacing: 1px;
+    padding: 16px 25px;
+    margin-top: 25px;
+}
+
+.section-8__button:hover{
+    opacity: 0.9;
+
 /*-----------------------------
 Nils
 section-9
