--- a/assets/style.css
+++ b/assets/style.css
@@ -182,6 +182,43 @@ header
 .show {
     display: block;
 }
+
+
+/*-----------------------------
+Nils
+section-1
+-----------------------------*/
+
+.section-1  {
+    width:940px;
+    display: flex;
+    padding-top: 50px;
+}
+
+.section-1-part1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+     }
+
+.section-1__button{
+    background-color: #00b289;
+    border-radius: 4px;
+    color: #fff;
+    letter-spacing: 1px;
+    padding: 16px 25px;
+    margin-right: auto;
+}
+
+.section-1__button:hover{
+    opacity: 0.9;
+}
+
+.dashboard {
+    width: 750px;
+}
+
+
 /*-----------------------------
 Zoey
 section-4
@@ -524,28 +561,23 @@ section-8
 -----------------------------*/
 
 .section-8 {
-    grid-column: 1/-1;
-    margin: auto;
-}
-
-.section-8-flex {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center;l
 }
-
 .section-8__button{
     background-color: #00b289;
     border-radius: 4px;
     color: #fff;
     letter-spacing: 1px;
     padding: 16px 25px;
-    margin-top: 25px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .section-8__button:hover{
     opacity: 0.9;
-
+}
 /*-----------------------------
 Nils
 section-9
