--- a/assets/media.css
+++ b/assets/media.css
@@ -1,12 +1,12 @@
-@media only screen and (max-width: 982px){
+@media only screen and (max-width: 990px){
 	.header-nav{
-		width: 720px;
+		width: 728px;
 	}
 	.header-nav__menu{
 		display: none;
 	}
 	.section-4, .section-5, .section-6, .section-1{
-		width:720px;
+		width:728px;
 	}
 	.section-1{
 		flex-direction: column;
@@ -22,16 +22,16 @@
 	}
 
 }
-@media only screen and (max-width: 810px){
-	.section-4, .section-5, .section-6, .section-1, .header-nav{
+@media only screen and (max-width: 767px){
+	.section-4, .section-5, .section-6, .header-nav{
 		padding: 20px;
-		max-width: 720px;
+		max-width: 728px;
 	}
-	.section-5-main{
+	.section-5-main div, .section-6{
 		flex-direction: column;
-	}
-	.section-6{
-		flex-direction: column;
+	}	
+	.section-6-part2{
+		margin: auto;
 	}
 
 	.footer-container {
