--- a/assets/media.css
+++ b/assets/media.css
@@ -1,10 +1,4 @@
 @media only screen and (max-width: 990px){
-	.header-nav{
-		width: 728px;
-	}
-	.header-nav__menu{
-		display: none;
-	}
 	.section-4, .section-5, .section-6, .section-1{
 		width:728px;
 	}
@@ -23,7 +17,12 @@
 
 }
 @media only screen and (max-width: 767px){
-	.section-4, .section-5, .section-6, .header-nav{
+	.header{position:fixed; z-index: 100;width:100%}
+	.header-menu{width:100%;height:0px; overflow: hidden;}
+	.header-menu__item{display: block;}
+	.header__icon-bar{display: block;}
+	.is-open{height: 300px;overflow: auto;background-color: lightblue;width: 100%;position: absolute;left: 0;top: 5.5em;}
+	.section-4, .section-5, .section-6,{
 		padding: 20px;
 		max-width: 728px;
 	}
