--- a/assets/media.css
+++ b/assets/media.css
@@ -5,7 +5,7 @@
 	.header-nav__menu{
 		display: none;
 	}
-	.section-4, .section-5, .section-6, .section-1{
+	.section-2, .section-3, .section-4, .section-5, .section-6, .section-1{
 		width:728px;
 	}
 	.section-1{
@@ -14,6 +14,22 @@
 	.section-1-part2{
 		width: 90%;
 	}
+	.section-2-part1__items a{
+    width: 80%;
+    height: 75%;
+    padding: 30px 10px 0 10px;
+
+    }
+    .section-2-part1__items a:hover{
+    width: 83%;
+    height: 78%;
+	}
+	.section-2-part1__items a p{
+    height: 100px;
+    margin-top: 0;
+    margin-bottom: 0;
+    text-align: center;
+}
 	.section-4-main__tabs{
 		padding: 20px 15px;
 	}
@@ -23,18 +39,41 @@
 
 }
 @media only screen and (max-width: 767px){
-	.section-4, .section-5, .section-6, .header-nav{
+	.section-2,.section-3, .section-4, .section-5, .section-6, .header-nav{
 		padding: 20px;
 		max-width: 728px;
 	}
-	.section-5-main div, .section-6{
+	.section-5-main div, .section-2,.section-3-main, .section-6{
 		flex-direction: column;
+	}
+	.section-2-part1{
+		width: 65%;
+	}
+	 .section-2-part2{
+		width: 100%;
 	}	
+	.section-3-main__items{
+		flex-shrink: 1;
+    	width: 90%;
+	}
 	.section-6-part2{
 		margin: auto;
 	}
 
 	.footer-container {
 		flex-direction: column;
+	}
+}
+@media only screen and (max-width: 480px){
+	.section-2-part1{
+		width: 100%;
+		border:1px solid red;
+	}
+	.section-2-part1__items {
+    width: 80%;
+    border:1px solid red;
+	}
+	.section-2-part2{
+		text-align: center;
 	}
 }
