--- a/assets/media.css
+++ b/assets/media.css
@@ -17,7 +17,7 @@
 
 }
 @media only screen and (max-width: 767px){
-	.header{position:fixed; z-index: 100;width:100%}
+	.header{position:fixed; z-index: 100;width:100%;padding: 0 20px;}
 	.header-menu{width:100%;height:0px; overflow: hidden;}
 	.header-menu__item{display: block;}
 	.header__icon-bar{display: block;}
