--- a/assets/style.css
+++ b/assets/style.css
@@ -237,6 +237,7 @@ section-3
     padding: 10px 10px 10px 150px;
     margin-bottom: 10px;
     margin-top: 10px;
+    transition-duration: .5s;
  }
  .section-3-main__item1{
     background-image:url('img/asset 31.png');
