--- a/assets/style.css
+++ b/assets/style.css
@@ -162,6 +162,7 @@ section-2
     color: var(--darkgrey);
     display: flex;
     flex-direction: row;
+    margin-top: 100px;
 }
 .section-2-part1{
     display: flex;
@@ -172,10 +173,10 @@ section-2
     width: 50%;
 }
 .section-2-part1__items a{
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
     width: 90%;
     height: 90%;
-    padding: 30px 10px 10px 10px;
+    padding-top: 2rem;
     display: flex;
     margin: auto;
     flex-direction: column;
@@ -238,6 +239,12 @@ section-3
     margin-bottom: 10px;
     margin-top: 10px;
  }
+ .section-3-main__items:hover{
+    margin-bottom: 20px;
+    margin-top: 0;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 4px 18px 0 rgba(0, 0, 0, 0.1);
+    transition: 0.3s;
+ }
  .section-3-main__item1{
     background-image:url('img/asset 31.png');
     background-repeat: no-repeat;
@@ -274,12 +281,7 @@ section-3
  .section-3-main__item4:hover{
     background-position: -80px 0;
  }
- .section-3-main__items:hover{
-    margin-bottom: 20px;
-    margin-top: 0;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 4px 18px 0 rgba(0, 0, 0, 0.1);
-    transition: 0.3s ;
- }
+
  .section-3__button {
     margin-top: 40px;
  } 
@@ -292,6 +294,7 @@ section-4
     color: var(--darkgrey);
     display: flex;
     flex-direction: column;
+    justify-content: center;
     margin-top: 200px;
 }
 
@@ -315,6 +318,7 @@ section-4
     margin-top: 0;
     padding: 20px 110px;
     border-bottom: 1px solid #ddd;
+    flex-shrink: 1;
 }
 
 .section-4-list {
@@ -334,11 +338,12 @@ section-4
     border-bottom: 1px solid #ddd;
     align-self: flex-start;
     padding: 20px;
-    padding-bottom: 0
+    padding-bottom: 0;
+    flex-shrink: 1;
 }
 
 .section-4-main__item1 div {
-    padding: 20px;
+    padding: 1.3rem;
     padding-bottom: 0;
     margin: 10px;
     margin-bottom: 0;
@@ -351,10 +356,12 @@ section-4
     border: 1px solid #ddd;
     margin: 0;
     border-bottom: 0;
+    max-width: 100%;
 }
 
 .section-4-main__item2 {
     padding: 10px;
+    flex-shrink: 1;
 }
 
 .section-4-main__moving {
@@ -445,6 +452,7 @@ section-4
     letter-spacing: 1px;
     padding: 16px 25px;
     margin: 40px auto 150px auto;
+    
 }
 
 .section-4__button:hover {
@@ -591,6 +599,8 @@ section-6
     display: flex;
     flex-direction: column;
     padding-bottom: 30px;
+    padding-right:20px; 
+    width: 65%;
 }
 
 .section-6-part1__title {
@@ -622,8 +632,8 @@ section-6
 }
 
 .section-6-part2 {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
-    width: 480px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+    width: 35%;
 }
 
 .section-6-part2 ul {
