--- a/assets/media.css
+++ b/assets/media.css
@@ -6,6 +6,7 @@
 	.section-4,
 	.section-5,
 	.section-6{width:728px;}
+
 	.dashboard {flex-direction: column;align-items: center;text-align: center; width: 100%}
 	.dashboard-img{position:unset;width: 82%;padding: 3rem 0 0;}
 	.dashboard-text{width: 80%;margin: 0 auto;}
@@ -14,9 +15,14 @@
     .section-2-part1__items a:hover{width: 83%;height: 78%;	}
 	.section-2-part1__items a p{height: 100px;margin-bottom: 0;text-align: center;}
 	.section-4-main__tabs{padding: 20px 15px;}
-	#tabs-1 , #tabs-2, #tabs-3 , #tabs-4, #tabs-5{flex-direction: column;}
-
+	#tabs-1,
+	#tabs-2,
+	#tabs-3,
+	#tabs-4,
+	#tabs-5{flex-direction: column;}
+	.links p{text-align: center;}
 }
+
 @media only screen and (max-width: 767px){
 	.header{position:sticky; z-index:999;width:100%;padding: 0 20px;}
 	.header-menu{width:100%;height:0px; overflow: hidden;display:none;}
